Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-136741

QWasmSuspendControl - missing signature for dynamic linking

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P2: Important
    • None
    • 6.10
    • Core: Threads
    • None
    • WebAssembly
    • 47e3a5b80 (dev)

    Description

      Application cannot start at runtime with error:
      ` Missing signature argument to addFunction: () `

      This is caused by inability to generate a function signature for functions defined with EM_JS.
      It's possible a bug in Emscripten.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            piwierci Piotr Wierciński
            piwierci Piotr Wierciński
            Votes:
            1 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes